2016-05-05  James Monk  <jmonk@cern.ch>
  * Fix memory leak due to improperly freed gsl wavelet workspace

2016-04-05  James Monk  <jmonk@cern.ch>
  * Replace rows of PixelArray to keep track of empty pixels and avoid
    division by zero

2016-03-09  James Monk  <jmonk@cern.ch>
  * Fix mistake in MomentumHelpers has_Pt

2016-03-07  James Monk  <jmonk@cern.ch>
  *  Added WaveletCoefficient::isSmoothing, which returns true if a
     coefficient should be considered part of the "smoothing"
     coefficients that contain no detail information

2015-12-10  James Monk  <jmonk@cern.ch>
  *  Fixed bug which meant ,phi indices on coefficients were accidentally transposed.  No impact up until now since information was not used
  *  Added Pt implementation (as used by TLorentzVector) to MomentumHelpers

2015-12-08  James Monk  <jmonk@cern.ch>
  *  Added methods for phi[Min, Max]() and y[Min, Max]() to
     WaveletCoefficient, giving the physical region to which each
     coefficient is localised and contributes.
  *  Update to GSLEngine to implement the filling of the phi and y ranges

2015-10-28  James Monk  <jmonk@cern.ch>
  *  Fix problem when particle phi is exactly 0 or Pi, leading to out of array bounds
  *  Use at() instead of [] to access vector elements

2015-08-24  James Monk  <jmonk@cern.ch>
  *  Add WaveletEvent::setScaleParticles(bool) to switch off output particle scaling

2015-08-10  James Monk  <jmonk@cern.ch>
  *  WaveletEvent has scale member to apply user-definable scaling function
     to the coefficients
  *  PixelArray is returned from the WaveletEvent by reference
  *  WaveletEvent::frequencyBand(const WaveletCoefficient&) gives the FrequencyBand
     to which a given coefficient belongs
  *  WaveletCoefficient contains a pointer to a WaveletBaseEvent, base interface
     of the WaveletEvent class.  This allows a coefficien to know its own
     FrequencyBand

2015-07-21  James Monk  <jmonk@cern.ch>